ci: add npm release jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - test
+  - release
 
 cache:
   key: "$CI_PROJECT_NAME"
@@ -22,3 +23,38 @@ test:
     matrix:
       - IMAGE: node:20
       - IMAGE: node:22
+
+.release_job: &release_job
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_COMMIT_REF_PROTECTED == "true"
+  stage: release
+  needs:
+    - lint
+
+release:pkg-npm:
+  <<: *base_job
+  <<: *release_job
+  script:
+    - echo "//registry.npmjs.org/:_authToken=${NPM_PUBLISH_TOKEN}" > .npmrc
+    - npm run build
+    - npm publish --access public
+
+release:pkg-gitlab:
+  <<: *base_job
+  <<: *release_job
+  script:
+    - echo "@thelabnyc:registry=https://${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/" > .npmrc
+    - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}" >> .npmrc
+    - npm run build
+    - npm publish
+
+release:gitlab:
+  <<: *release_job
+  image: registry.gitlab.com/gitlab-org/release-cli:latest@sha256:3f52d526f48e8d10625c722fa6d6423ee82aadeae1b1aa91f07b62551d96dacf
+  script:
+    - echo 'noop'
+  release:
+    name: "Release $CI_COMMIT_TAG"
+    description: "Release $CI_COMMIT_TAG. Tagged by $GITLAB_USER_LOGIN"
+    tag_name: "$CI_COMMIT_TAG"
+    ref: "$CI_COMMIT_TAG"
