--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ts-to-io": "./cli.js"
   },
   "dependencies": {
-    "commander": "3.0.2",
+    "commander": "^14.0.0",
     "typescript": "5.8.3"
   },
   "devDependencies": {
