fix: update cz config

--- a/.cz.toml
+++ b/.cz.toml
@@ -10,6 +10,7 @@ version_provider = "npm"
 version_scheme = "semver"
 version_files = [
     "package.json:version",
+    "src/config.ts:VERSION",
 ]
 pre_bump_hooks = [
     "npm i",
