--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,67 +2,35 @@ stages:
   - test
   - release
 
-cache:
-  key: "$CI_PROJECT_NAME"
-  paths:
-    - node_modules
+variables:
+  # We have to disable sigstore for now since NPM currently only supports
+  # provenance when publishing from a gitlab-hosted runner. Hopefully we can
+  # enable this in the future once they drop this limitation (which should be
+  # possible since PyPI has no such limitation on their use of sigstore).
+  NPM_CONFIG_PROVENANCE: "false"
 
 include:
-  - component: gitlab.com/thelabnyc/thelab-ci-components/precommit@0.4.0
+  - component: gitlab.com/thelabnyc/thelab-ci-components/precommit@0.5.0
     inputs:
-      image: registry.gitlab.com/thelabnyc/python:3.13.810-node20@sha256:021ab06d834d8a96fda03797b7b536cc77cfc31c86194a749a86a61c44936061
-
-.base_job: &base_job
-  image: node:22@sha256:afff6d8c97964a438d2e6a9c96509367e45d8bf93f790ad561a1eaea926303d9
-  before_script:
-    - npm ci
-  variables:
-    NODE_ENV: development
+      image: registry.gitlab.com/thelabnyc/python:3.13.960-node24@sha256:9cb82ee53bc8ad2d7fea12d10f6e3583b6a0924dbaab4bb51b52605396017475
+  - component: gitlab.com/thelabnyc/thelab-ci-components/publish-gitlab-release@0.5.0
+  - component: gitlab.com/thelabnyc/thelab-ci-components/publish-to-npm@0.5.0
 
 test:
-  <<: *base_job
   stage: test
   image: "${IMAGE}"
+  variables:
+    NODE_ENV: development
   script:
+    - npm ci
     - npm run lint
     - npm run build
     - npm run test
   parallel:
     matrix:
-      - IMAGE: node:20
       - IMAGE: node:22
-
-.release_job: &release_job
-  rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_REF_PROTECTED == "true"
-  stage: release
-  needs:
-    - test
-
-release:pkg-npm:
-  <<: *base_job
-  <<: *release_job
-  script:
-    - echo "//registry.npmjs.org/:_authToken=${NPM_PUBLISH_TOKEN}" > .npmrc
-    - npm run build
-    - npm publish --access public
-
-release:pkg-gitlab:
-  <<: *base_job
-  <<: *release_job
-  script:
-    - echo "@thelabnyc:registry=https://${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/" > .npmrc
-    - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}" >> .npmrc
-    - npm run build
-    - npm publish
-
-release:gitlab:
-  <<: *release_job
-  image: registry.gitlab.com/gitlab-org/release-cli:latest@sha256:3f52d526f48e8d10625c722fa6d6423ee82aadeae1b1aa91f07b62551d96dacf
-  script:
-    - echo 'noop'
-  release:
-    name: "Release $CI_COMMIT_TAG"
-    description: "Release $CI_COMMIT_TAG. Tagged by $GITLAB_USER_LOGIN"
-    tag_name: "$CI_COMMIT_TAG"
-    ref: "$CI_COMMIT_TAG"
+      - IMAGE: node:24
+  cache:
+    key: "${CI_PROJECT_NAME}-test-${IMAGE}"
+    paths:
+      - node_modules
