--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,8 @@
+workflow:
+  rules:
+    - if: $CI_COMMIT_REF_PROTECTED == "true"
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+
 stages:
   - test
   - release
@@ -10,6 +15,7 @@ variables:
   NPM_CONFIG_PROVENANCE: "false"
 
 include:
+  - component: gitlab.com/thelabnyc/thelab-ci-components/review@0.6.0
   - component: gitlab.com/thelabnyc/thelab-ci-components/precommit@0.5.1
     inputs:
       image: registry.gitlab.com/thelabnyc/python:3.13.960-node24@sha256:9cb82ee53bc8ad2d7fea12d10f6e3583b6a0924dbaab4bb51b52605396017475
